# ptdata-social-media-enrichment

./: .dockerignore  .env.example  .gitignore  .samignore  Dockerfile  Makefile  README.md  bucket-policy.json  config.yaml  env.example  env.json  handler.py  local_env.json  main.py  packaged.yaml  policy.template  policy.yaml  ptdata-social-media-enrichment.code-workspace  pyproject.toml  pytest.ini  requirements.txt  samconfig.toml  serverless.yaml  template.yaml  tmp.md
.github/workflows/: cd.yaml  ci.yaml  deploy.yml
_tests/connectors/: test_connector.py
_tests/connectors/aws/: test_aws_types.py
_tests/inference/: test_inference_client.py
cmd/cli/: go.mod  main.go  ptdata-cli
cmd/cli/examples/: example.go
config/: README.md  default.yaml  sentiment.yaml  user_needs.yaml
events/: env.json  sentiment.json  user_needs.json  user_needs_scheduled.json
jobs/: README.md  main.py
jobs/sentiment/: config.yaml  main.py
jobs/test/: config.yaml  main.py  test_connector.py  test_enrichment.py
jobs/test/samples/: records.json
samples/: source.json  target.json  test_input.json
scripts/: create_tables.py  create_tables.sh  init.sh
scripts/ddl/: create_tables.sh  dim_post_ai_metrics.sql  fact_post_ai_metrics.sql
scripts/ddl/sentiment/: dim_social_media_ai.sql  fact_social_media_ai.sql
scripts/tables/: dim_channel.sql  dim_channel_group.sql  dim_post_ai_details.sql  dim_post_details.sql  fact_social_media_ai_metrics.sql  fact_social_media_reaction_post.sql
scripts/test/: test_query.sh
src/: README.md  __init__.py  config.yaml  main.py  processor.py  requirements.txt
src/aws/: __init__.py  client.py  config.py  types.py
src/azure/: __init__.py  client.py  config.py  prompts.py  types.py
src/common/: README.md  __init__.py  component.py  config.py  data.py  types.py  utils.py
src/connectors/: README.md  __init__.py  client.py  component.py  config.py  types.py  utils.py
src/connectors/athena/: client.py  types.py
src/connectors/aws/: __init__.py  client.py  component.py  config.py  types.py  utils.py
src/inference/: README.md  __init__.py  client.py  component.py  config.py  types.py
src/inference/models/: __init__.py  base.py  sentiment.py  user_needs.py
src/model/: __init__.py  base.py  data_models.py  input.py  output.py
src/models/: __init__.py  base.py  builder.py  component.py  config.py  types.py
src/processor/: __init__.py  processor.py
src/sql/: create_tables.sql
src/utils/: __init__.py  db.py  types.py
tests/: README.md  check_iceberg_simple.py  conftest.py  test_arrow_converter.py  test_athena.py  test_aws.py  test_azure.py  test_connector.py  test_enrichment.py  test_models.py
tests/connectors/: test_connector_types.py
tests/connectors/aws/: test_aws_client.py  test_aws_types.py
tests/inference/: test_inference_types.py
tests/models/: test_types.py
tests/samples/: error.json  event.json  target.json
